[package]
name = "injector"
version = "0.1.0"
edition = "2021"

[lib]
name = "injector"
#path = "src/lib.rs"

[[bin]]
name = "injector"
path = "src/bin.rs"
required-features = ["cli"]

[features]
cli = ["clap"]

[dependencies]
win = { path = "../win" }
winapi = { version = "0.3", features = ["errhandlingapi", "psapi", "handleapi", "processthreadsapi", "winnt", "minwindef", "memoryapi", "libloaderapi", "synchapi", "winbase"] }
clap = { version = "3.1", optional = true }
